--- a/app/src/main/res/layout/dialog_delete_call_permanently.xml
+++ b/app/src/main/res/layout/dialog_delete_call_permanently.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -7,7 +7,6 @@
         android:id="@+id/llSubMainDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_marginHorizontal="@dimen/_10sdp"
         android:background="@drawable/white_rectangle"
         android:elevation="@dimen/_3sdp"
@@ -99,4 +98,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</FrameLayout>
