--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     tools:context=".activities.OnBoardingActivity">
 
@@ -13,46 +13,44 @@
         android:layout_height="match_parent" />
 
     <!-- Page indicator -->
-   <!-- <me.relex.circleindicator.CircleIndicator3
-        android:id="@+id/indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        style="@style/CircleIndicatorStyle"
-        android:layout_marginBottom="120dp" />-->
+    <!-- <me.relex.circleindicator.CircleIndicator3
+         android:id="@+id/indicator"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_centerHorizontal="true"
+         style="@style/CircleIndicatorStyle"
+         android:layout_marginBottom="120dp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        >
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
 
-    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-        android:id="@+id/dotIndicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-         app:dotsColor="#C0C0C0"
-        app:dotsSize="@dimen/_6sdp"
-        app:dotsSpacing="@dimen/_3sdp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="@dimen/_20sdp"
-        app:selectedDotColor="@color/button_color" />
+        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+            android:id="@+id/dotIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/_20sdp"
+            app:dotsColor="#C0C0C0"
+            app:dotsSize="@dimen/_6sdp"
+            app:dotsSpacing="@dimen/_3sdp"
+            app:selectedDotColor="@color/button_color" />
 
         <TextView
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="@dimen/_20sdp"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/poppins_medium"
-            android:includeFontPadding="false"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:text="@string/caller_id_lets_you_decide_before_answering"
             android:textColor="@color/black"
-            android:layout_marginHorizontal="@dimen/_20sdp"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold" />
 
@@ -61,6 +59,7 @@
             android:layout_width="@dimen/_160sdp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:background="@drawable/edit_text_background"
             android:backgroundTint="@color/button_color"
             android:fontFamily="@font/poppins_semibold"
@@ -70,11 +69,10 @@
             android:text="@string/allow_permission"
             android:textAllCaps="false"
             android:textColor="@color/white_og"
-            android:layout_marginBottom="@dimen/_20sdp"
             android:textSize="@dimen/_14sdp" />
 
     </LinearLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
 
