--- a/app/src/main/res/layout/activity_on_boarding_overlay_permission.xml
+++ b/app/src/main/res/layout/activity_on_boarding_overlay_permission.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,8 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="bottom"
         android:orientation="vertical">
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
@@ -91,17 +90,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-             android:padding="@dimen/_7sdp"
+            android:layout_marginBottom="@dimen/_6sdp"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
             android:includeFontPadding="false"
+            android:padding="@dimen/_7sdp"
             android:text="Why?"
             android:textColor="@color/_20b56e"
-            android:layout_marginBottom="@dimen/_6sdp"
             android:textSize="@dimen/_13sdp" />
 
     </LinearLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
 
