--- a/app/src/main/res/layout/activity_permission_denied.xml
+++ b/app/src/main/res/layout/activity_permission_denied.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="vertical"
     android:padding="15dp">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        android:layout_above="@+id/txtContinue">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:overScrollMode="never">
 
 
         <LinearLayout
@@ -233,8 +234,6 @@
         android:id="@+id/txtContinue"
         android:layout_width="@dimen/_160sdp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:background="@drawable/edit_text_background"
         android:backgroundTint="@color/button_color"
@@ -244,8 +243,9 @@
         android:padding="12dp"
         android:text="@string/go_to_setting"
         android:textAllCaps="false"
+        android:layout_marginTop="@dimen/_5sdp"
         android:textColor="@color/white_og"
         android:textSize="@dimen/_14sdp" />
 
-</RelativeLayout>
+</LinearLayout>
 
