--- a/app/src/main/res/layout/favourite_list_layout_item.xml
+++ b/app/src/main/res/layout/favourite_list_layout_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/_60sdp"
     android:layout_height="wrap_content"
@@ -47,9 +47,8 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_alignParentEnd="true"
+        android:layout_gravity="end"
         android:src="@drawable/ic_remove" />
 
 
-</RelativeLayout>
+</FrameLayout>
